* Added mobile view

--- a/index.html
+++ b/index.html
@@ -20,28 +20,14 @@
             <img class="logo" src="./logo.png" alt="logo">
             <h2>My Library</h2>
         </div>
-        <button class="btn" id="switch">Light Mode</button>
+        <button class="btn switch" id="">Light Mode</button>
     </header>
-    <!-- <div class="alert">Success</div> -->
-
-    <!-- Add button, popup an add form -->
-    <button class="btn" id="add-btn">Add New</button>
-
+    <!-- example of alert <div class="alert">Success</div> -->
     <!-- overlay to dim the screen -->
     <div id="overlay"></div>
-
-    <!--  -->
+    <!-- book list -->
     <div class="books-container">
-        <!-- Adds books here, the following is e.g of a book node: -->
-        <!-- <div class="book">
-            <i class="fas fa-times"></i>
-            <div class="book-title">
-                <h1>Book Title</h1>
-            </div>
-            <h3>Author Name</h3>
-            <div class="isRead">Read</div>
-        </div> -->
-
+        <!-- add book here -->
     </div>
 
     <!-- Popup section -->
@@ -65,5 +51,7 @@
         </div>
     </section>
 </body>
+<button class="btn add-btn">Add New</button>
+
 
 </html>
