--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             <img class="logo" src="./logo.png" alt="logo">
             <h2>My Library</h2>
         </div>
-        <button class="btn switch" id="">Light Mode</button>
     </header>
     <!-- example of alert <div class="alert">Success</div> -->
     <!-- overlay to dim the screen -->
@@ -51,7 +50,6 @@
         </div>
     </section>
 </body>
-<button class="btn add-btn">Add New</button>
-
+<button class="btn add-btn"><i class="fas fa-plus"></i></button>
 
 </html>
