--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             </form>
         </div>
     </section>
+    <!-- add button -->
+    <button class="btn add-btn"><i class="fas fa-plus"></i></button>
 </body>
-<button class="btn add-btn"><i class="fas fa-plus"></i></button>
 
 </html>
