* Fix bug trimming leading and ending space for input    * Added git hub link    * Added moving keyframes animations

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <img class="logo" src="./logo.png" alt="logo">
             <h2>My Library</h2>
         </div>
+        <div class="github">
+            <a href="https://github.com/le000165/book">
+                <i class="fab fa-github-square"></i>
+            </a>
+        </div>
     </header>
     <!-- example of alert <div class="alert">Success</div> -->
     <!-- overlay to dim the screen -->
