*Fix bug on setting reading status

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <input type="number" id="pages" name="pages" placeholder="Number of pages" autocomplete="off"
                     required />
                 <select name="isRead" id="is-read">
-                    <option value="true">Read</option>
-                    <option value="false">Not Read Yet</option>
+                    <option value="1">Read</option>
+                    <option value="0">Not Read Yet</option>
                 </select>
                 <button class="btn" id="submit-btn" type="submit" name="submit">Submit</button>
             </form>
